@@ -31,6 +31,7 @@ export(assert)
 export(bestFitness)
 export(bestSolution)
 export(cbuf)
+export(compare.algorithms1)
 export(contourplothelper)
 export(ees1.challenge)
 export(ees1.explore)
@@ -47,8 +48,12 @@ export(enforceBounds)
 export(es.evaluate)
 export(extremize)
 export(f0.adtn.rosenbrock2)
+export(f0.bohachevsky)
+export(f0.bohachevsky4)
 export(f0.cigar)
 export(f0.cigar4)
+export(f0.griewank)
+export(f0.griewank4)
 export(f0.nlnn.rosenbrock2)
 export(f0.periodtuningpp)
 export(f0.periodtuningpp12)
@@ -58,14 +63,19 @@ export(f0.periodtuningpp72)
 export(f0.rosenbrock2)
 export(f0.rosenbrock4)
 export(f0.rosenbrockn)
+export(f0.schaffer)
+export(f0.schaffer4)
 export(f0.schwefel)
 export(f0.schwefel4)
 export(f0.test)
 export(f1.adtn.rosenbrock2)
+export(f1.bohachevsky)
 export(f1.cigar)
+export(f1.griewank)
 export(f1.nlnn.rosenbrock2)
 export(f1.rosenbrock2)
 export(f1.rosenbrockn)
+export(f1.schaffer)
 export(f1.schwefel)
 export(f1.test)
 export(fixdfcolumns)
@@ -97,9 +107,11 @@ export(saa.tbyk)
 export(saa.tcte)
 export(saa.texp)
 export(scatterplotlothelper)
+export(show.comp1)
 export(slope)
 export(slopes)
 export(sortSolution)
+export(summarize.comp1)
 export(upperBound)
 export(xmeanci1)
 export(xmeanci2)
@@ -115,6 +127,7 @@ exportClasses(OptionsSAA)
 exportClasses(PlainFunction)
 exportClasses(RepastFunction)
 import(plot3D)
+import(plyr)
 importFrom(boot,boot)
 importFrom(boot,boot.ci)
 importFrom(futile.logger,flog.debug)
@@ -126,6 +139,7 @@ importFrom(ggplot2,aes_string)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,facet_wrap)
+importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_density2d)
 importFrom(ggplot2,geom_histogram)
 importFrom(ggplot2,geom_line)
